<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.AddMovieActivity"
    tools:menu="@menu/add_movie_menu">




    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/movie_name"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/edit_text_producer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/producer"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/edit_text_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:inputType="text"
        android:imeOptions="actionDone"/>

    <EditText
        android:id="@+id/edit_text_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:inputType="text"
        android:imeOptions="actionDone"/>



</LinearLayout>